--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,5 +7,16 @@
   "browser_action": {
     "default_popup": "index.html"
   },
+  "icons": {
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
   "web_accessible_resources": ["index.html"]
 }
